Fix overflow error

--- a/styles.css
+++ b/styles.css
@@ -22,15 +22,9 @@ h1 {
     font-size: xx-large;
 }
 
-ngx-tweet {
-    display: flex;
-    justify-content: center;
-}
-
 .fill {
     background-image: url(img/cloud.jpg);
     background-repeat: no-repeat;
-    overflow: hidden;
     height: 100vh;
     width: 100%;
 }
